[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Fahrenheit To Celsius"
bundle = "com.example"
version = "0.0.1"
url = "https://github.com/pmfrank/beeware-tutorials"
license = "BSD license"
author = 'Paul Frankovich'
author_email = "pmfrankovich@gmail.com"

[tool.briefcase.app.fahrenheittocelsius]
formal_name = "Fahrenheit To Celsius"
description = "Convert F to C"
icon = "src/fahrenheittocelsius/resources/fahrenheittocelsius"
sources = ['src/fahrenheittocelsius']
requires = []


[tool.briefcase.app.fahrenheittocelsius.macOS]
requires = [
    'toga-cocoa>=0.3.0.dev18',
]

[tool.briefcase.app.fahrenheittocelsius.linux]
requires = [
    'toga-gtk>=0.3.0.dev18',
]

[tool.briefcase.app.fahrenheittocelsius.windows]
requires = [
    'toga-winforms>=0.3.0.dev18',
]

# Mobile deployments
[tool.briefcase.app.fahrenheittocelsius.iOS]
requires = [
    'toga-iOS>=0.3.0.dev18',
]

[tool.briefcase.app.fahrenheittocelsius.android]
requires = [
    'toga-android>=0.3.0.dev18',
]
